- Support display and modification of active plugins, initiated by
  discussion in bz 989946. Adds plugin and flag feedback to template.
  New --display-plugins and --plugins options.
- Stability tested on > 12000 packages. Fixes
    + corner case  .desktop files (544eca2, 18cc82f)
    + macros in %files line (7566e91)
    + subpackages with version <> base package (4a6597a).
- New DISTFLAG used when disttag can't be deduced from prebuilt
  packages (09304f2).

0.4.2
=====
- Fix crash for specfiles missing a %install section (bz 967571)

0.4.1
=====
- Updated and improved Java checks for latest packaging guidelines
    * Automate buildarch check
    * Do CheckNoArch per subpackage instead of buildarch
    * Add check for new style Maven packaging
    * Update CheckTestSkip for mvn-build
    * Maven packages don't need to BR/R jpackage-utils check
- Fix attachment name for 'MD5-sum check' (bz 861716)
- Fix %files section handling for font-packages (#209)
- Handle %20 in source URLs correctly (bz 920376)
- Fix CheckLicenseField for multiple files without license (#205)
- Don't write licenses in random order
- Fix several bugs in koji-download-scratch script
- Output ANSI color sequences only on color terminals (bz 955719)
- Compress legend of report
- Fix problem with subpackages being ignored/missed
- Add 'Copyright' to illegal tags check

0.4
===

- The deprecated JSON api has been removed.
- Patch-naming check not mandated by GL is removed (#179).
- New checks:
    * Bundled gnulib check (#53).
    * Run phpci static analyzer on php packages (#63).
    * Various scriptlet checks (#152).
    * Tmpfiles.d check (#156).
    * Bundled fonts check (#155).
    * Improper %_sourcedir usage test (#154).
    * Test that sources could be downloaded from SourceX: tag (#198)
- Improved report layout (#135).
- Improved console output, notably invisible yellow text fixed. (#185).
- The report has got a fixed name 'review.txt'.